--- a/core/templates/core/course.html
+++ b/core/templates/core/course.html
@@ -4,18 +4,6 @@
   <section class="page-section portfolio" id="portfolio">
     <div class="container">
 
-      <!-- Portfolio Section Heading -->
-      <h2 class="page-section-heading text-center  text-secondary mb-0"> {{ topic_name }} Courses </h2>
-
-      <!-- Icon Divider -->
-      <div class="divider-custom">
-        <div class="divider-custom-line"></div>
-        <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
-        </div>
-        <div class="divider-custom-line"></div>
-      </div>
-
       <!-- Portfolio Grid Items -->
       <div class="row">
 
@@ -25,7 +13,7 @@
 
 {%for item in items %}
         <!-- Portfolio Item 1 -->
-        <div class="col-md-6 col-lg-4">
+        <div class="col-md-12 col-lg-12">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
@@ -41,10 +29,11 @@
                 <source src="/media/{{ item.video }}" type="video/wmv">
             </video>
 
-             <a class="col-sm-6" href="/media/{{ item.video }}"> {{ item.video }} </a>
+             <a class="col-sm-6 text-center text-white" href="/media/{{ item.video }}"> Download Link !  </a>
+            <p class="col-sm-6 text-center text-white" >{{ item.description }}</p>
           </div>
         </div>
-
+        <hr/>
 
 
 
